# ascii-cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  myfile.txt  run.sh
docs/: ascii_manpage.txt
src/: builder.rs  cli.rs  detect.rs  helper.rs  lib.rs  main.rs  remove.rs  replace.rs  report.rs  result.rs
src/cli/: result.rs  usage.rs
